--- a/index.html
+++ b/index.html
@@ -1,163 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Inspection Checklist</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 400px;
-            margin: auto;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        h2, h3 {
-            text-align: center;
-        }
-        .checklist {
-            list-style: none;
-            padding: 0;
-        }
-        .checklist li {
-            padding: 10px;
-            background: #fff;
-            margin: 5px 0;
-            display: flex;
-            flex-direction: column;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        .checklist div {
-            display: flex;
-            align-items: center;
-        }
-        .checklist input {
-            margin-right: 10px;
-        }
-        .info {
-            font-size: 12px;
-            color: gray;
-            margin-left: 25px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Daily Inspection Checklist</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 500px;
+      margin: auto;
+      padding: 20px;
+      background-color: #f4f4f4;
+    }
+    h2, h3 {
+      text-align: center;
+    }
+    .checklist {
+      list-style: none;
+      padding: 0;
+    }
+    .checklist li {
+      padding: 10px;
+      background: #fff;
+      margin: 5px 0;
+      display: flex;
+      flex-direction: column;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .checklist div {
+      display: flex;
+      align-items: center;
+    }
+    .checklist input {
+      margin-right: 10px;
+    }
+    .info {
+      font-size: 12px;
+      color: gray;
+      margin-left: 25px;
+    }
+    #csvContainer {
+      margin-top: 20px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    <h2>Daily Inspection Checklist</h2>
-    <h3 id="dateTitle"></h3>
-    <ul class="checklist" id="checklist">
-        <!-- Locations will be populated here -->
-    </ul>
+  <h2>Daily Inspection Checklist</h2>
+  <h3 id="dateTitle"></h3>
+  <ul class="checklist" id="checklist">
+    <!-- Locations will be populated here -->
+  </ul>
+  <div id="csvContainer">
+    <p>CSV Data: <a id="csvLink" href="#" target="_blank">Not updated yet</a></p>
+  </div>
+  <script>
+    // Replace with your unique endpoint from crudcrud.com
+    // For example: 'https://crudcrud.com/api/1234567890abcdef1234567890abcdef/checklist'
+    const API_URL = 'https://crudcrud.com/api/f22568bc2cb4499297b5cd96796a8278/checklist';
+    let docId = null; // will store our document _id once created
+    let lastCSV = ""; // to track the most recent CSV text
 
-    <script>
-        const locations = [
-            "ALVA", "PNCU", "CPPY", "AATK", "MUTT", "KLMT", "CCUV", "PDPM", "EDAP", "CGPP",
-            "PARV", "JLSD", "KALR", "TNHL", "MGRD", "MACE", "ERSH", "KVTR", "EMKM", "VYTA",
-            "TKDM", "PETT", "VAKK", "SNJN", "TPHT", "TKRS", "MTRS", "MUDC"
-        ];
+    const locations = [
+      "ALVA", "PNCU", "CPPY", "AATK", "MUTT", "KLMT", "CCUV", "PDPM", "EDAP", "CGPP",
+      "PARV", "JLSD", "KALR", "TNHL", "MGRD", "MACE", "ERSH", "KVTR", "EMKM", "VYTA",
+      "TKDM", "PETT", "VAKK", "SNJN", "TPHT", "TKRS", "MTRS", "MUDC"
+    ];
 
-        const checklist = document.getElementById("checklist");
-        const dateTitle = document.getElementById("dateTitle");
+    const checklist = document.getElementById("checklist");
+    const dateTitle = document.getElementById("dateTitle");
 
-        function updateDateTitle() {
-            const now = new Date();
-            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            dateTitle.textContent = now.toLocaleDateString('en-IN', options);
-        }
+    // Update the title with the current date
+    function updateDateTitle() {
+      const now = new Date();
+      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+      dateTitle.textContent = now.toLocaleDateString('en-IN', options);
+    }
 
-        function saveChecklist() {
-            const checklistData = Array.from(document.querySelectorAll(".checklist li")).map(li => {
-                return {
-                    checked: li.querySelector("input").checked,
-                    name: li.dataset.name || "",
-                    time: li.dataset.time || ""
-                };
-            });
-            localStorage.setItem("checklistData", JSON.stringify(checklistData));
-        }
+    // Build the checklist UI (one <li> per location)
+    function createChecklistUI() {
+      checklist.innerHTML = "";
+      locations.forEach((location) => {
+        const li = document.createElement("li");
+        li.setAttribute("data-location", location);
+        li.dataset.name = "";
+        li.dataset.time = "";
 
-        function loadChecklist() {
-            const savedData = JSON.parse(localStorage.getItem("checklistData")) || Array(locations.length).fill({ checked: false, name: "", time: "" });
-
-            locations.forEach((location, index) => {
-                const li = document.createElement("li");
-                li.dataset.name = savedData[index].name;
-                li.dataset.time = savedData[index].time;
-
-                const div = document.createElement("div");
-
-                const checkbox = document.createElement("input");
-                checkbox.type = "checkbox";
-                checkbox.checked = savedData[index].checked;
-                checkbox.addEventListener("change", function () {
-                    if (this.checked) {
-                        const name = prompt("Enter your name:");
-                        if (name) {
-                            const now = new Date();
-                            const timeStr = now.toLocaleTimeString('en-IN', { hour: '2-digit', minute: '2-digit' });
-                            li.dataset.name = name;
-                            li.dataset.time = timeStr;
-                        } else {
-                            this.checked = false;
-                        }
-                    } else {
-                        li.dataset.name = "";
-                        li.dataset.time = "";
-                    }
-                    saveChecklist();
-                    updateInfo(li);
-                });
-
-                const label = document.createElement("label");
-                label.textContent = location;
-
-                div.appendChild(checkbox);
-                div.appendChild(label);
-                li.appendChild(div);
-
-                const info = document.createElement("div");
-                info.className = "info";
-                updateInfo(li, info);
-
-                li.appendChild(info);
-                checklist.appendChild(li);
-            });
-        }
-
-        function updateInfo(li, infoDiv) {
-            if (!infoDiv) infoDiv = li.querySelector(".info");
-            infoDiv.textContent = li.dataset.name ? `Checked by: ${li.dataset.name} at ${li.dataset.time}` : "";
-        }
-
-        function resetChecklist() {
-            localStorage.removeItem("checklistData");
-            document.querySelectorAll(".checklist li").forEach(li => {
-                li.querySelector("input").checked = false;
-                li.dataset.name = "";
-                li.dataset.time = "";
-                updateInfo(li);
-            });
-        }
-
-        function scheduleDailyReset() {
-            const now = new Date();
-            const resetTime = new Date(now);
-            resetTime.setHours(23, 59, 0, 0);
-
-            let timeUntilReset = resetTime - now;
-            if (timeUntilReset < 0) {
-                timeUntilReset += 24 * 60 * 60 * 1000;
+        const div = document.createElement("div");
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        checkbox.addEventListener("change", function () {
+          if (this.checked) {
+            const name = prompt("Enter your name:");
+            if (name) {
+              const now = new Date();
+              const timeStr = now.toLocaleTimeString('en-IN', { hour: '2-digit', minute: '2-digit' });
+              li.dataset.name = name;
+              li.dataset.time = timeStr;
+            } else {
+              // if no name is entered, cancel the check
+              this.checked = false;
             }
+          } else {
+            li.dataset.name = "";
+            li.dataset.time = "";
+          }
+          updateInfo(li);
+          saveStateAndSync();
+        });
+        const label = document.createElement("label");
+        label.textContent = location;
+        div.appendChild(checkbox);
+        div.appendChild(label);
+        li.appendChild(div);
+        const info = document.createElement("div");
+        info.className = "info";
+        li.appendChild(info);
+        checklist.appendChild(li);
+      });
+    }
 
-            setTimeout(() => {
-                resetChecklist();
-                scheduleDailyReset();
-            }, timeUntilReset);
+    // Update the info text below a checklist item
+    function updateInfo(li) {
+      const infoDiv = li.querySelector(".info");
+      infoDiv.textContent = li.dataset.name ? `Checked by: ${li.dataset.name} at ${li.dataset.time}` : "";
+    }
+
+    // Generate CSV text from the current state of the checklist
+    function generateCSV() {
+      let csvText = "Location,Checked,Name,Time\n";
+      const items = document.querySelectorAll(".checklist li");
+      items.forEach(li => {
+        const locationName = li.getAttribute("data-location");
+        const checkbox = li.querySelector("input");
+        const checked = checkbox.checked;
+        const name = li.dataset.name || "";
+        const time = li.dataset.time || "";
+        csvText += `${locationName},${checked},${name},${time}\n`;
+      });
+      return csvText;
+    }
+
+    // Save the current state and sync it to the backend
+    function saveStateAndSync() {
+      const csvText = generateCSV();
+      lastCSV = csvText;
+      // Update the CSV link on the page
+      document.getElementById("csvLink").href = "data:text/csv;charset=utf-8," + encodeURIComponent(csvText);
+      document.getElementById("csvLink").textContent = "Local CSV Data";
+      
+      // If we already have a document, update it; otherwise, create one.
+      if (docId) {
+        fetch(API_URL + '/' + docId, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ csv: csvText })
+        })
+        .catch(error => console.error("Error updating backend:", error));
+      } else {
+        fetch(API_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ csv: csvText })
+        })
+        .then(response => response.json())
+        .then(data => { docId = data._id; })
+        .catch(error => console.error("Error creating backend document:", error));
+      }
+    }
+
+    // Parse CSV text and update the checklist UI accordingly
+    function updateUIFromCSV(csvText) {
+      const lines = csvText.split("\n").filter(line => line.trim() !== "");
+      // Remove header line
+      lines.shift();
+      const dataMap = {};
+      lines.forEach(line => {
+        const parts = line.split(",");
+        if (parts.length >= 4) {
+          const [loc, checked, name, time] = parts;
+          dataMap[loc.trim()] = {
+            checked: checked.trim() === "true",
+            name: name.trim(),
+            time: time.trim()
+          };
         }
+      });
+      // Update each checklist item based on the CSV data
+      const items = document.querySelectorAll(".checklist li");
+      items.forEach(li => {
+        const loc = li.getAttribute("data-location");
+        if (dataMap[loc]) {
+          const { checked, name, time } = dataMap[loc];
+          li.querySelector("input").checked = checked;
+          li.dataset.name = name;
+          li.dataset.time = time;
+          updateInfo(li);
+        }
+      });
+    }
 
-        updateDateTitle();
-        loadChecklist();
+    // Fetch the CSV data from the backend and update UI if needed
+    function fetchBackend() {
+      fetch(API_URL)
+      .then(response => response.json())
+      .then(data => {
+        if (data.length > 0) {
+          // We assume our shared checklist is the first (and only) document.
+          const backendData = data[0];
+          if (!docId) { docId = backendData._id; }
+          if (backendData.csv && backendData.csv !== lastCSV) {
+            lastCSV = backendData.csv;
+            updateUIFromCSV(backendData.csv);
+            document.getElementById("csvLink").href = "data:text/csv;charset=utf-8," + encodeURIComponent(backendData.csv);
+            document.getElementById("csvLink").textContent = "Backend CSV Data";
+          }
+        }
+      })
+      .catch(error => console.error("Error fetching backend:", error));
+    }
+
+    // Poll the backend periodically (every 10 seconds)
+    function pollBackend() {
+      setInterval(fetchBackend, 10000);
+    }
+
+    // Reset the checklist (called at 11:59 PM) and sync the reset state
+    function resetChecklist() {
+      const items = document.querySelectorAll(".checklist li");
+      items.forEach(li => {
+        li.querySelector("input").checked = false;
+        li.dataset.name = "";
+        li.dataset.time = "";
+        updateInfo(li);
+      });
+      saveStateAndSync();
+    }
+
+    // Schedule a daily reset at 11:59 PM Indian time
+    function scheduleDailyReset() {
+      const now = new Date();
+      const resetTime = new Date(now);
+      resetTime.setHours(23, 59, 0, 0);
+      let timeUntilReset = resetTime - now;
+      if (timeUntilReset < 0) { timeUntilReset += 24 * 60 * 60 * 1000; }
+      setTimeout(() => {
+        resetChecklist();
         scheduleDailyReset();
-    </script>
+      }, timeUntilReset);
+    }
+
+    // Initialize everything
+    updateDateTitle();
+    createChecklistUI();
+    fetchBackend();
+    pollBackend();
+    scheduleDailyReset();
+  </script>
 </body>
 </html>
