--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <script>
     // Replace with your unique endpoint from crudcrud.com
     // For example: 'https://crudcrud.com/api/1234567890abcdef1234567890abcdef/checklist'
-    const API_URL = 'https://crudcrud.com/api/f22568bc2cb4499297b5cd96796a8278/checklist';
+    const API_URL = 'https://crudcrud.com/api//checklist';
     let docId = null; // will store our document _id once created
     let lastCSV = ""; // to track the most recent CSV text
 
