--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <script>
     // Replace with your unique endpoint from crudcrud.com
     // For example: 'https://crudcrud.com/api/1234567890abcdef1234567890abcdef/checklist'
-    const API_URL = 'https://crudcrud.com/api//checklist';
+    const API_URL = 'https://crudcrud.com/api/c08d794349704516aff9e709f796f5d9/checklist';
     let docId = null; // will store our document _id once created
     let lastCSV = ""; // to track the most recent CSV text
 
