--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             box-shadow: 0 8px 20px rgba(135, 206, 235, 0.3);
         }
 
-        .card .placeholder-img {
+        .card iframe {
             width: 100%;
-            height: 150px;
-            background: #e0e0e0;
+            height: 200px;
+            border: none;
             border-radius: 8px;
             margin-bottom: 15px;
         }
@@ -194,22 +194,8 @@
     <!-- Content Section -->
     <section class="content">
         <h2 class="section-title">Latest Vlog Posts</h2>
-        <div class="grid">
-            <div class="card">
-                <div class="placeholder-img"></div>
-                <h3>Vlog Post Title 1</h3>
-                <p>Short description placeholder...</p>
-            </div>
-            <div class="card">
-                <div class="placeholder-img"></div>
-                <h3>Vlog Post Title 2</h3>
-                <p>Short description placeholder...</p>
-            </div>
-            <div class="card">
-                <div class="placeholder-img"></div>
-                <h3>Vlog Post Title 3</h3>
-                <p>Short description placeholder...</p>
-            </div>
+        <div class="grid" id="vlog-grid">
+            <!-- Vlog posts will be dynamically inserted here -->
         </div>
 
         <h2 class="section-title">Featured Tools</h2>
@@ -234,12 +220,67 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Bidrah. All rights reserved.</p>
+        <p>© 2025 Bidrah. All rights reserved.</p>
         <div class="social-icons">
             <a href="#">Twitter</a>
             <a href="#">YouTube</a>
             <a href="#">GitHub</a>
         </div>
     </footer>
+
+    <!-- JavaScript to Load and Embed YouTube Videos -->
+    <script>
+        // Function to extract YouTube video ID from URL
+        function getYouTubeId(url) {
+            const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+            const match = url.match(regExp);
+            return (match && match[2].length === 11) ? match[2] : null;
+        }
+
+        // Fetch and parse CSV file
+        fetch('links.csv')
+            .then(response => response.text())
+            .then(data => {
+                const rows = data.split('\n').slice(1); // Skip header row
+                const vlogGrid = document.getElementById('vlog-grid');
+
+                rows.forEach(row => {
+                    if (row.trim() === '') return; // Skip empty rows
+                    const [url, title, description] = row.split(',');
+
+                    const videoId = getYouTubeId(url);
+                    if (!videoId) return; // Skip invalid URLs
+
+                    // Create card element
+                    const card = document.createElement('div');
+                    card.className = 'card';
+
+                    // Embed YouTube iframe
+                    const iframe = document.createElement('iframe');
+                    iframe.src = `https://www.youtube.com/embed/${videoId}`;
+                    iframe.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
+                    iframe.allowFullscreen = true;
+
+                    // Add title and description
+                    const titleEl = document.createElement('h3');
+                    titleEl.textContent = title || 'Untitled Video';
+
+                    const descEl = document.createElement('p');
+                    descEl.textContent = description || 'No description available';
+
+                    // Append elements to card
+                    card.appendChild(iframe);
+                    card.appendChild(titleEl);
+                    card.appendChild(descEl);
+
+                    // Append card to grid
+                    vlogGrid.appendChild(card);
+                });
+            })
+            .catch(error => {
+                console.error('Error loading CSV:', error);
+                document.getElementById('vlog-grid').innerHTML = '<p>Error loading vlog posts.</p>';
+            });
+    </script>
 </body>
 </html>
