--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     <section class="hero">
         <h1>Welcome to Bidrah</h1>
         <p>Your hub for cutting-edge tech vlogs & tools</p>
-        <a href=picsum.html class="cta">Explore Now</a>
+        <a href="picsum.html" class="cta">Explore Now</a>
     </section>
 
     <!-- Content Section -->
